# runfrog

./: Dockerfile  Dockerfile_celery  Dockerfile_nicegui  README.md  TODO.md  docker-compose-develop.yml  pyproject.toml
docs/: Dockerfile  README_site_deploy.md  README_site_develop.md  RELEASE.md  docker-compose-develop.yml  docker-compose-production.yml  docker-purge.sh  nicegui.md
nginx/config/conf.d/: local.conf
release-notes/: 0.1.0.md
runfrog-site/src/helpers/: additionalInfoUtils.ts  reportInitialization.ts
runfrog-site/src/mixins/: tableMixin.ts
runfrog-site/src/router/: index.ts
runfrog-site/src/store/: index.ts
src/runfrog/: __init__.py  api.py  gui.py  worker.py
src/runfrog/oven/: background_task.py  sub_pages.py
tests/: test_api.py
