[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runfrog"
version = "0.1.0"
description = "Runfrog website"
readme = "README.md"
requires-python = ">=3.13"
authors = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
maintainers = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
	"modeling",
	"standardization",
	"COMBINE",
	"metadata",
	"archive",
	"annotation",
    "reproducibility",
	"SBML",
	"fbc",
]
dependencies = [
    "fbc_curation>=0.3.2",
    "pydantic>=2.12.4",
    "fastapi>=0.121.1",
    "nicegui>=0.3.2",
    "orjson",
    "celery",
]

[project_urls]
Homepage = "https://runfrog.de"
Repository = "https://github.com/matthiaskoenig/runfrog"
Documentation = "https://github.com/matthiaskoenig/runfrog"
Issues = "https://github.com/matthiaskoenig/runfrog/issues"

[tool.hatch.version]
path = "./src/runfrog/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true