[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runfrog"
version = "0.1.0"
description = "Runfrog website"
readme = "README.md"
requires-python = ">=3.13"
authors = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
maintainers = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
	"modeling",
	"standardization",
	"COMBINE",
	"metadata",
	"archive",
	"annotation",
    "reproducibility",
	"SBML",
	"fbc",
]
dependencies = [
    # "fbc_curation>=0.3.2",
    "fbc_curation @ git+https://github.com/matthiaskoenig/sbmlutils.git@f08b0eb",
    "pydantic>=2.12.4",
    "fastapi>=0.121.1",
    "nicegui>=0.3.2",
    "orjson>=3.11.4",
    "celery>=5.5.3",
    "redis>=7.0.1",
    "flower>=2.0.1",

    # native
    # "pywebview",
    # "pywebview[qt]",
    # "PyGObject==3.50.0",
]

[project_urls]
Homepage = "https://runfrog.de"
Repository = "https://github.com/matthiaskoenig/runfrog"
Documentation = "https://github.com/matthiaskoenig/runfrog"
Issues = "https://github.com/matthiaskoenig/runfrog/issues"

[tool.hatch.version]
path = "./src/runfrog/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true